Add core structure for quiz

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <title>Quiz Swe Politics</title>
 </head>
 <body>
+    <main id="game">
+        <h1>Sweden's Politics</h1>
+        <section id="quiz">
+            <h2 id="quiz">Question</h2>
+            <div id="answers-buttons">
+                <button class="btn"></button>
+                <button class="btn"></button>
+                <button class="btn"></button>
+                <button class="btn"></button>
+            </div>
+            <button class="next-btn"></button>
+        </section>
+        <div>
+            <p class="scores">Correct Answers <span id="score">0</span></p>
+            <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+        </div>
+        <button id="quit-btn">Quit</button>
+    </main>
     
     <script src="assets/js/script.js"></script>
 </body>
