Add footer and social media icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
         </div>
         <button id="quit-btn">Quit</button>
     </main>
-    
+    <footer>
+        <a href="https://github.com/rimanfarhood" target="_blank" rel="noopener" aria-label="click to open my Github in a new tab">
+            <i class="fa-brands fa-github"></i></a>
+        <a href="https://github.com/rimanfarhood" target="_blank" rel="noopener" aria-label="click to open my Github in a new tab">
+            <i class="fa-brands fa-github"></i></a>
+    </footer>
+    <script src="https://kit.fontawesome.com/34b596b8b6.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
