Add a code for introducing part before starting the quiz.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Quiz Swe Politics</title>
 </head>
 <body>
+    <div id="start">
+        <p>Test your knowledge about Sweden's politic with our quiz</p>
+        <button id="start-btn" class="btn" onclick="startQuiz();">Start Quiz</button>
+    </div>
     <main id="game">
         <h1>Sweden's Politics</h1>
         <section id="quiz">
@@ -31,8 +35,8 @@
     <footer>
         <a href="https://github.com/rimanfarhood" target="_blank" rel="noopener" aria-label="click to open my Github in a new tab">
             <i class="fa-brands fa-github"></i></a>
-        <a href="https://github.com/rimanfarhood" target="_blank" rel="noopener" aria-label="click to open my Github in a new tab">
-            <i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/riman-farhood-988b09200/" target="_blank" rel="noopener" aria-label="click to open my Github in a new tab">
+            <i class="fa-brands fa-linkedin"></i></a>
     </footer>
     <script src="https://kit.fontawesome.com/34b596b8b6.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
