Add style to quiz

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Sweden's Politics</h1>
         <section id="quiz">
             <h2 id="quiz">Question</h2>
-            <div id="answers-buttons">
-                <button class="btn"></button>
-                <button class="btn"></button>
-                <button class="btn"></button>
-                <button class="btn"></button>
+            <div id="answer-buttons">
+                <button class="btn">1</button>
+                <button class="btn">2</button>
+                <button class="btn">3</button>
+                <button class="btn">4</button>
             </div>
-            <button class="next-btn"></button>
+            <button class="next-btn">Next</button>
         </section>
         <div>
             <p class="scores">Correct Answers <span id="score">0</span></p>
