Add code to a funtcion to start the quiz

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main id="game">
         <h1>Sweden's Politics</h1>
         <section id="quiz">
-            <h2 id="quiz">Question</h2>
+            <h2 id="question">Question</h2>
             <div id="answer-buttons">
                 <button class="btn">1</button>
                 <button class="btn">2</button>
