--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button class="btn">3</button>
                 <button class="btn">4</button>
             </div>
-            <button class="next-btn">Next</button>
+            <button id="next-btn"></button>
         </section>
         <div>
             <p class="scores">Correct Answers <span id="score">0</span></p>
