Add html code for users highest score tracker

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <button id="next-btn"></button>
         </section>
         <div>
+            <p class="high-score">Your all time high score is: <span id="high-score">0</span></p>
             <p class="scores">Correct Answers <span id="score">0</span></p>
             <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
         </div>
