--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </section>
         <div>
             <p class="high-score">Your all time high score is: <span id="high-score">0</span></p>
-            <p class="scores">Correct Answers <span id="score">0</span></p>
-            <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+            <p class="scores">Correct Answers: <span id="score">0</span></p>
+            <p class="scores">Incorrect Answers: <span id="incorrect">0</span></p>
         </div>
         <button id="quit-btn">Quit</button>
     </main>
