Add tidy ups for typos, media queries and style.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="start">
-        <p>Test your knowledge about Sweden's politic with our quiz</p>
+        <p>Test your knowledge about Sweden's politic with our quiz!</p>
         <button id="start-btn" class="btn" onclick="startQuiz();">Start Quiz</button>
     </div>
     <main id="game">
@@ -24,12 +24,12 @@
                 <button class="btn">3</button>
                 <button class="btn">4</button>
             </div>
-            <button id="next-btn"></button>
+            <button class="btn" id="next-btn"></button>
         </section>
-        <div>
-            <p class="high-score">Your all time high score is: <span id="high-score">0</span></p>
-            <p class="scores">Correct Answers: <span id="score">0</span></p>
-            <p class="scores">Incorrect Answers: <span id="incorrect">0</span></p>
+        <div class="score-area">
+            <p>Your highest score is: <span id="high-score">0</span></p>
+            <p>Correct Answers: <span id="score">0</span></p>
+            <p>Incorrect Answers: <span id="incorrect">0</span></p>
         </div>
         <button id="quit-btn">Quit</button>
     </main>
