--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Quiz about Sweden's politics">
     <meta name="keywords" content="Quiz, politics, Sweden">
     <meta name="author" content="Riman Farhood">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Quiz Swe Politics</title>
 </head>
