Add comments to html, css and js.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
     <title>Quiz Swe Politics</title>
 </head>
 <body>
+
+    <!--Landing page section-->
+
     <div id="start">
         <p>Test your knowledge about Sweden's politic with our quiz!</p>
         <button id="start-btn" class="btn" onclick="startQuiz();">Start Quiz</button>
     </div>
+
+    <!-- Quiz -->
+
     <main id="game">
         <h1>Sweden's Politics</h1>
         <section id="quiz">
@@ -39,6 +45,8 @@
         </div>
         <button id="quit-btn">Quit</button>
     </main>
+
+    <!-- Footer -->
     <footer>
         <a href="https://github.com/rimanfarhood" target="_blank" rel="noopener" aria-label="click to open my Github in a new tab">
             <i class="fa-brands fa-github"></i></a>
