--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="keywords" content="Quiz, politics, Sweden">
     <meta name="author" content="Riman Farhood">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/favicon_io (2)/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon_io (2)/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon_io (2)/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Quiz Swe Politics</title>
