Add images to readme folder and content to next button.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button class="btn">3</button>
                 <button class="btn">4</button>
             </div>
-            <button class="btn" id="next-btn"></button>
+            <button class="btn" id="next-btn">Next</button>
         </section>
         <div class="score-area">
             <p>Your highest score is: <span id="high-score">0</span></p>
