Create functionality to select difficulty level on questions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
     <div id="start">
         <p>Test your knowledge about Sweden's politic with our quiz!</p>
+        <div>
+            <label for="level">Select Difficulty</label>
+            <select id="level">
+                <option value="Easy">Easy</option>
+                <option value="Medium">Medium</option>
+                <option value="Hard">Hard</option>
+            </select>
+        </div>
         <button id="start-btn" class="btn" onclick="startQuiz();">Start Quiz</button>
     </div>
 
