Add difficulty option to combine all levels

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="diff">
             <label for="level">Select Difficulty</label>
             <select id="level">
+                <option value="Mix">Mix</option>
                 <option value="Easy">Easy</option>
                 <option value="Medium">Medium</option>
                 <option value="Hard">Hard</option>
