Add functionality to make it required to select difficulty level

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div id="start">
         <h1 class="heading">Test your knowledge about Sweden's politic with our quiz!</h1>
         <div class="diff">
-            <label for="level">Select Difficulty</label>
+            <label for="level" aria-required="select difficulty">Select Difficulty</label>
             <select id="level">
+                <option value="">-</option>
                 <option value="Mix">Mix</option>
                 <option value="Easy">Easy</option>
                 <option value="Medium">Medium</option>
